--- a/index.css
+++ b/index.css
@@ -7,12 +7,17 @@
 }
 
 :root {
-  --clr-white: #FFFFFF;
-  --clr-black: #202020;
   --clr-grey: #707070;
   --clr-blue: #6C63FF;
   --clr-blue-2: #4c46b6;
   --clr-green: #4fb646;
+
+  --clr-black: #1E2022;
+  --clr-white: #ffffff;
+  --clr-grey:  #E6E6E6;
+  --clr-pink3: #F5247D;
+  --clr-pink2: #F7559A;
+  --clr-pink1: #F986B7;
 }
 
 body {
@@ -75,12 +80,12 @@ nav {
   width: 175px;
   height: 50px;
   margin: 0 auto;
-
-  background-color: var(--clr-blue);
+  
+  background-color: var(--clr-pink1);
   color: var(--clr-white);
 
   border: none;
-  border-radius: 4px;
+  border-radius: 200px;
 
   font-family: "Open Sans";
   font-size: 1.10em;
@@ -91,7 +96,7 @@ nav {
 }
 
 .nav__connect:hover {
-  background-color: var(--clr-blue-2);
+  background-color: var(--clr-pink3);
 }
 
 /* ------------------------------------------------------ */
@@ -353,4 +358,27 @@ header {
   .nav__links {
     display: none;
   }
+}
+
+
+.btn-launch{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 24px 16px;
+  gap: 5.4px;
+  width: 140px;
+  height: 55px;
+  background: #FFFFFF;
+  border: 1px solid #F986B7;
+  border-radius: 200px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: #F986B7;
 }
