--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 
   --clr-black: #1E2022;
   --clr-white: #ffffff;
-  --clr-grey:  #E6E6E6;
+  --clr-grey: #E6E6E6;
   --clr-pink3: #F5247D;
   --clr-pink2: #F7559A;
   --clr-pink1: #F986B7;
@@ -25,6 +25,7 @@ body {
   font-family: "Open Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1E2022;
 }
 
 /* ------------------------------------------------------ */
@@ -77,20 +78,18 @@ nav {
 }
 
 .nav__connect {
-  width: 175px;
-  height: 50px;
+  width: calc(175px / 1.10);
+  height: calc(50px / 1.10);
   margin: 0 auto;
-  
+
   background-color: var(--clr-pink1);
   color: var(--clr-white);
 
   border: none;
-  border-radius: 200px;
+  border-radius: 100px;
 
-  font-family: "Open Sans";
-  font-size: 1.10em;
-  font-weight: 600;
-
+  font-family: "Russo One', sans-serif";
+  font-size: 22px;
   cursor: pointer;
   transition: all 250ms ease;
 }
@@ -99,43 +98,54 @@ nav {
   background-color: var(--clr-pink3);
 }
 
+.logonav {
+  width: calc(261px / 1.30);
+  height: calc(63px /1.30);
+
+}
+
 /* ------------------------------------------------------ */
 /* -- HEADER -- */
 
 header {
+
   background-image: url("./assets/search.jpeg");
   background-position: center;
   background-size: cover;
-  min-height: 40vh;
-
-  position: relative;
 }
 
 .header__title {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
+  font-family: Russo One, sans-serif;
   color: var(--clr-white);
-  font-size: 2em;
-
+  font-size: 40px;
+  color: #FFFFFF;
   width: 100%;
   text-align: center;
+
 }
 
 .header__search {
-  padding: 25px;
-  min-width: 40%;
-
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px;
+  gap: 8px;
+  width: 500px;
+  height: 56px;
+  border: 1.4px solid #1E2022;
+  border-radius: 8px;
 }
 
+@media (hover: hover) {
+  .header__search:hover {
+    cursor: pointer;
+  }
+}
+
+
+
 .header__search::placeholder {
-  font-family: "Open Sans";
+  font-family: "Russo One', sans-serif";
   font-size: 1.25em;
   font-weight: 600;
 }
@@ -144,76 +154,94 @@ header {
   outline: 1px solid var(--clr-blue);
 }
 
+@media (max-width: 600px){
+  .header__search{
+    width: 300px;
+  }
+
+}
+
 /* ------------------------------------------------------ */
 /* -- CARDS -- */
-
-.cards__section {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.cards__section h3 {
-  margin: 50px 0 20px;
-}
-
 .cards {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+
 }
 
 .card {
-  width: 350px;
-  height: 275px;
-
-  border: 1px solid var(--clr-black);
-  margin: 10px auto;
-
+  border: 1px solid #FFFFFF;
   cursor: pointer;
+  padding: 1rem;
+  border-radius: 30px;
   position: relative;
-
-  transition: all 250ms ease;
-}
-
-.card:hover {
-  box-shadow: 1px 1px 5px var(--clr-grey);
 }
 
 .card__image {
-  position: absolute;
-  width: 100%;
-  z-index: -1;
+  width: 500px;
 }
 
-.card__image img {
-  max-width: 100%;
-}
-
-.card__info {
-  width: 100%;
-  height: 45%;
-
-  background-color: var(--clr-white);
-
-  padding: 5px 10px;
-
+.info{
   position: absolute;
-  bottom: 0;
+  width: 500px;
+  height: 100%;
+  top: 0;
   left: 0;
+  text-align: center;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Russo One', sans-serif";
+  font-size: 24px;
+  color: #FFFFFF;
+  background-color: #1E2022;
+  border-radius: 30px;
+  opacity: .8;
+}
+.info2{
+  text-align: center;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Russo One', sans-serif";
+  font-size: 18px;
+  color: #FFFFFF;
 }
 
-.card__info h4 {
-  font-family: "Open Sans";
-  font-size: 1.25em;
-  font-weight: 600;
+@media (hover: hover) {
+  .card__image:hover .info{
+    display: flex;
+  }
+
+  .card:hover {
+    box-shadow: 1px 1px 5px var(--clr-grey);
+  } 
+
 }
 
-.card__info p {
-  font-family: "Open Sans";
-  font-size: 0.90em;
-  margin-top: 5px;
+@media (max-width: 600px){
+  .info2{
+    display: flex;
+  }
+  .card__image{
+    width: 300px;
+  }
+  .info{
+    width: 300px;
+  }
+  .cards{
+    justify-content: center;
+  }
+
+  .card{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /* ------------------------------------------------------ */
@@ -223,96 +251,63 @@ header {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
-
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .home__details {
-  display: grid;
+  display: flex;
   /* grid-template-columns: repeat(2, 1fr); */
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
   align-items: center;
-
+  position: relative;
   width: 80%;
   height: 70%;
-  margin: 0 auto;
   padding: 20px;
-
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 2;
-
-  background: var(--clr-white);
+  background: #1E2022;
+  border-radius: 30px;
+  justify-content: space-around;
+  border: solid 1px #FFFFFF;
 }
 
 .home__image {
-  max-width: 500px;
-  margin: 20px auto;
-}
-
-.home__image img {
-  max-width: 100%;
+  width: 500px;
 }
 
 .home__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-
-  width: 30px;
-  height: 30px;
-
-  background: transparent;
-  border: none;
-
+  top: 20px;
+  right: 20px;
   cursor: pointer;
-}
-
-.home__close img {
-  width: 25px;
-  height: 25px;
+  font-size: 20px;
 }
 
 .home__overview {
-  height: 100%;
-  margin: 0 20px;
-  padding-right: 40px;
-
   overflow-y: scroll;
-}
-
-.home__overview h1,
-.home__overview h2,
-.home__overview hr {
-  margin: 10px auto;
-}
-
-.home__overview ul {
-  margin-left: 40px;
+  color: #FFFFFF;
+  font-family: "Russo One', sans-serif";
+  border: solid 1px #FFFFFF;
+  border-radius: 30px;
+  padding: 1rem;
 }
 
 .home__buy,
 .home__contact,
 .home__owned {
   margin: 20px 5px;
-
   background-color: var(--clr-blue);
   color: var(--clr-white);
-
   border: none;
   border-radius: 4px;
-
-  font-family: "Open Sans";
+  font-family: "Russo One', sans-serif";
   font-size: 1.10em;
   font-weight: 600;
-
   cursor: pointer;
-  transition: all 250ms ease;
 }
 
 .home__buy {
@@ -350,18 +345,19 @@ header {
   cursor: default;
 }
 
-@media screen and (max-width: 768px) {
-  nav {
-    grid-template-columns: repeat(2, 1fr);
+@media screen and (max-width: 900px) {
+  .home__details{
+    flex-direction: column;
+    gap: 5rem;
   }
-
-  .nav__links {
-    display: none;
+  .home__image{
+    width: 300px;
   }
+  
 }
 
 
-.btn-launch{
+.btn-launch {
   display: flex;
   flex-direction: row;
   justify-content: center;
