--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;900&display=swap');
 
 * {
   margin: 0;
@@ -22,91 +22,43 @@
 
 body {
   margin: 0;
-  font-family: "Open Sans";
+  font-family: 'Alegreya Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1E2022;
+  background-color: #000000;
 }
 
 /* ------------------------------------------------------ */
 /* -- NAVIGATION -- */
-
-nav {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
+.navmenu {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 900;
+  font-size: 21px;
+  color: #FFFFFF;
+  letter-spacing: 2.11px;
 }
 
-.nav__brand {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 20px;
-}
-
-.nav__brand img {
-  max-width: 125px;
-  height: auto;
-}
-
-.nav__brand h1 {
-  color: var(--clr-blue);
-  font-size: 2.5em;
-  font-weight: 800;
-}
-
-.instructions {
-  background-color: white
-}
-
-.nav__links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  list-style: none;
-}
-
-.nav__links li {
-  margin: 0 15px;
-}
-
-.nav__links li a {
-  text-decoration: none;
-  color: var(--clr-black);
-}
-
-.nav__links li a:hover {
-  color: var(--clr-blue);
+.navwallet {
+  border: 4px solid #FFFFFF;
+  border-radius: 10px;
+  width: 223px;
+  height: 65px;
 }
 
 .nav__connect {
-  width: calc(175px / 1.10);
-  height: calc(50px / 1.10);
-  margin: 0 auto;
-
-  background-color: var(--clr-pink1);
-  color: var(--clr-white);
-
-  border: none;
-  border-radius: 100px;
-
-  font-family: "Russo One', sans-serif";
-  font-size: 22px;
-  cursor: pointer;
-  transition: all 250ms ease;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 400;
+  font-size: 21px;
+  color: #FFFFFF;
+  letter-spacing: 2.11px;
 }
 
-.nav__connect:hover {
-  background-color: var(--clr-pink3);
+@media (hover: hover) {
+  .navmenu {
+    color: #EE2A7B;
+  }
 }
 
-.logonav {
-  width: calc(261px / 1.30);
-  height: calc(63px /1.30);
-
-}
 
 /* ------------------------------------------------------ */
 /* -- HEADER -- */
@@ -114,26 +66,34 @@ nav {
 
 
 .header__title {
-  font-family: Russo One, sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 900;
   color: var(--clr-white);
-  font-size: 40px;
+  font-size: 60px;
   color: #FFFFFF;
-  width: 100%;
   text-align: center;
-
+  font-size: 60px;
+  color: #FFFFFF;
+  letter-spacing: 6.03px;
+  text-transform: uppercase;
 }
 
 .header__search {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 16px;
-  gap: 8px;
-  width: 500px;
-  height: 56px;
-  border: 1.4px solid #1E2022;
-  border-radius: 8px;
+  width: 524px;
+  height: 80px;
+  background-image: linear-gradient(180deg, rgba(64, 67, 71, 0.74) 0%, rgba(30, 32, 34, 0.74) 100%);
+  border-radius: 10px;
+  border-style: none;
 }
+
+.header_adress {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 900;
+  font-size: 21px;
+  color: #FFFFFF;
+  letter-spacing: 2.11px;
+}
+
 
 @media (hover: hover) {
   .header__search:hover {
@@ -171,8 +131,7 @@ nav {
 }
 
 .card1 {
-  background:linear-gradient(to right bottom, #21142E, #21142E, #0B0B23, #040112, #060517, #060517, #040112, #040112, #040112, #040112, #040112, #040112);
-  ;
+  background-color: #000000;
 }
 
 .card {
