--- a/index.css
+++ b/index.css
@@ -133,12 +133,13 @@ body {
 /* ------------------------------------------------------ */
 /* -- CARDS -- */
 .card {
-  border-radius: 100px 100px 100px 0 /100px;
+  border-radius: 10px 100px 10px /100px;
   width: 450px;
   height: 700px;
   position: relative;
   background-image: linear-gradient(0deg, rgba(249, 134, 183, 0.15) 0%, rgba(244, 244, 244, 0.15) 100%, rgba(0, 0, 0, 0.15) 100%);
   box-shadow: inset 0 3px 13px 0 rgba(255, 255, 255, 0.50);
+  background-color: transparent;
 
 }
 
@@ -165,16 +166,21 @@ body {
   text-align: center;
 }
 
-@media (hover: hover) {
-  .card__image:hover .info {
-    display: flex;
-  }
-
-  .card:hover {
-    box-shadow: 2px 2px 2px 2px var(--clr-grey);
-    padding: 2.5rem;
-  }
+.cardbutton {
+  width: 350px;
+  height: 80px;
+  background: #EE2A7B;
+  border-radius: 50px;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 900;
+  font-size: 28px;
+  color: #FFFFFF;
+  letter-spacing: 2.81px;
+  text-align: center;
 }
+
+
+@media (hover: hover) {}
 
 @media (max-width: 600px) {
   .info2 {
@@ -199,6 +205,31 @@ body {
     flex-direction: column;
   }
 }
+
+.footerdegrad {
+  background-image: linear-gradient(0deg, rgba(249, 134, 183, 0.41) 0%, rgba(6, 3, 5, 0.41) 89%, rgba(0, 0, 0, 0.41) 89%);
+  width: 100%;
+  height: 648px;
+}
+
+.footertitle {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 900;
+  font-size: 21px;
+  color: #F986B7;
+  letter-spacing: 2.11px;
+  text-align: left;
+}
+
+.footertext {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #FFFFFF;
+  letter-spacing: 1.61px;
+  text-align: left;
+}
+
 
 /* ------------------------------------------------------ */
 /* -- HOMES -- */
